
Changelog for perl module AWS::S3

2012-03-01      v0.028
  - Fixed: AWS/S3.pm required a higher version of VSO than the Makefile.PL and META.yml.
  - Strange: Local testing shows $bucket->delete_multi works, but it gives me 
    some problems in production.

2012-02-24      v0.027
  - Fixed sporadic error:
    "Invalid value for AWS::S3::File.size: isn't a Int: [Str] 'contenttype': Must contain only numbers 0-9"

2012-01-30      v0.026
  - $bucket->file( $missing_file ) was failing silently, causing strange behavior
    further upstream.  Now it will confess with the http response from S3.

2012-01-12      v0.025
  - $bucket->delete_multi( @keys ) actually works now.

2012-01-05      v0.024
  - Better integration with CloudFront.
  - More CF-related updates are on the way.

2012-01-04      v0.023
  - Complete overhaul of the request-signing methodology.  Amazon should not be
    allowed to design any more public APIs until they learn about this little
    thing we call "Uniformity"

2012-01-04      v0.022
  - was never actually released...we skipped from 0.021 to 0.023

2011-12-31      v0.021
  - File's S3 was a weak ref, which caused problems.  No longer...

2011-12-21      v0.020
  - Updated to be compatible with VSO 0.21

2011-12-14      v0.019
  - Bucket's S3 was a weak ref, which caused problems sometimes.  Not anymore...
    we'll see if that fixes it.

2011-12-13      v0.018
  - Thanks to ukautz++ (Ulrich Kautz) for adding the ability to set the content-type
    of files stored in S3.
  - He even updated the POD to show how to set the content-type (via 'contenttype').

2011-12-11      v0.017
  - Fixed broken META.yml (again)

2011-12-10      v0.016
  - Fixed broken META.yml

2011-12-10      v0.015
  - Migrated to github.
  - Added repository url to meta.

2011-12-09      v0.014
  - A few minor updates.

2011-11-29      v0.013
  - AWS::S3::FileIterator now includes properties 'has_prev' and 'has_next' to