@@ -1,7 +1,7 @@
 
 package AWS::S3::Signer;
 
-use VSO;
+use Moose;
 use HTTP::Request::Common;
 use HTTP::Date 'time2str';
 use MIME::Base64 qw(encode_base64);
@@ -15,7 +15,8 @@ use Digest::MD5 'md5';
 my $METADATA_PREFIX      = 'x-amz-meta-';
 my $AMAZON_HEADER_PREFIX = 'x-amz-';
 
-enum 'AWS::S3::HTTPMethod' => [qw( HEAD GET PUT POST DELETE )];
+use Moose::Util::TypeConstraints qw(enum);
+use MooseX::Types::URI qw(Uri);
 
 has 's3' => (
     is       => 'ro',
@@ -25,7 +26,7 @@ has 's3' => (
 
 has 'method' => (
     is       => 'ro',
-    isa      => 'AWS::S3::HTTPMethod',
+    isa      => enum([qw/ HEAD GET PUT POST DELETE /]),
     required => 1,
 );
 
@@ -46,12 +47,10 @@ has 'bucket_name' => (
 
 has 'uri' => (
     is       => 'ro',
-    isa      => 'URI',
+    isa      => Uri,
     required => 1,
     coerce   => 1,
 );
-
-coerce 'URI' => from 'Str' => via { URI->new( $_ ) };
 
 #has 'headers' => (
 #  is        => 'ro',
